aligned cart order info. need to position fix cart header

--- a/public/styles/views/_cart.scss
+++ b/public/styles/views/_cart.scss
@@ -81,7 +81,6 @@
     max-width: 1200px;
     height: 37px;
     color: $fake-black;
-    // background-color: cadetblue;
     font-family: $main;
     font-size: 1.25rem;
     text-transform: uppercase;
@@ -90,34 +89,29 @@
 
     #product {
       width: 200px;
-      // background-color: rebeccapurple;
     }
 
     #ghost-description {
       width: 339px;
-      // background-color: teal;
     }
 
     #quantity {
       width: 287px;
-      // background-color: tomato;
     }
 
     #price {
       width: 135px;
-      // background-color: lightblue;
     }
 
     #total-price {
       width: 138px;
       white-space: nowrap;
-      // background-color: pink;
     }
   }
   /* Items in cart
 ------------------------------------------------------------- */
   .items-incart {
-    margin: 0 15px;
+    // margin: 0 15px;
     padding: 15px 0;
     border-bottom: 1px #cccccc solid;
     @include flex-j-a();
@@ -128,22 +122,25 @@
         border: 1px #cccccc solid;
         img {
           max-height: 100%;
-          max-width: 130px;
+          max-width: 150px;
           height: auto;
           width: auto;
         }
       }
     }
     .right {
+      display: flex;
+      flex-direction: row;
+      justify-content: flex-start;
       margin-left: 8px;
       width: 100%;
       height: 100%;
-      @include flex-j-a(flex-start, center);
 
       .one {
         @include flex-j-a();
         flex-direction: column;
         width: 38%;
+        padding: 0 0 13px 15px;
         h2 {
           font-family: $main;
           font-size: 20px;
@@ -158,11 +155,16 @@
       }
       .two {
         width: 32%;
+        padding: 0 20px;
         .itm-quan {
-          @include width-height(56px, 30px);
-          border-color: #cccccc;
+          @include width-height(40px, 31px);
+          border-color: #999999;
+          background-color: #ffffff;
           border-radius: 3px;
-          padding: 0 10px;
+          position: relative;
+          bottom: 2px;
+          right: 2px;
+          font-size: 14px;
         }
         h2 {
           text-transform: uppercase;
@@ -174,6 +176,7 @@
       }
       .three {
         width: 15%;
+        padding: 0 7px;
         h2 {
           font-weight: normal;
           font-family: $main;
